[gd_scene load_steps=5 format=3 uid="uid://y5wswomcvift"]

[ext_resource type="Script" path="res://game.gd" id="1_dd6yk"]
[ext_resource type="Script" path="res://Camera2d.gd" id="1_e5ygq"]
[ext_resource type="Script" path="res://Grid.gd" id="2_bqpvm"]
[ext_resource type="Script" path="res://TurnQueue.gd" id="4_rqwvr"]

[node name="Game" type="Node2D"]
position = Vector2(-368, -240)
script = ExtResource("1_dd6yk")
animal_count = 50

[node name="Camera2d" type="Camera2D" parent="."]
position = Vector2(960, 536)
current = true
script = ExtResource("1_e5ygq")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("2_bqpvm")

[node name="TurnQueue" type="Node" parent="."]
script = ExtResource("4_rqwvr")

[node name="TurnTimer" type="Timer" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PassTimeButton" type="Button" parent="GUI"]
anchors_preset = -1
anchor_left = 0.841667
anchor_top = 0.925926
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -40.0
offset_right = -64.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "SINGLE TURN"

[node name="SpeedButtons" type="HBoxContainer" parent="GUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -120.0
offset_right = 224.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="Pause" type="Button" parent="GUI/SpeedButtons"]
layout_mode = 2
offset_right = 86.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = "l l
1"

[node name="Speed1" type="Button" parent="GUI/SpeedButtons"]
layout_mode = 2
offset_left = 90.0
offset_right = 176.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = ">
2"

[node name="Speed2" type="Button" parent="GUI/SpeedButtons"]
layout_mode = 2
offset_left = 180.0
offset_right = 266.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = ">>
3"

[node name="Speed3" type="Button" parent="GUI/SpeedButtons"]
layout_mode = 2
offset_left = 270.0
offset_right = 356.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = ">>>
4"

[node name="Speed4" type="Button" parent="GUI/SpeedButtons"]
layout_mode = 2
offset_left = 360.0
offset_right = 447.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = ">>>>
5"

[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
[connection signal="pressed" from="GUI/PassTimeButton" to="." method="_on_pass_time_button_pressed"]
[connection signal="pressed" from="GUI/SpeedButtons/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="GUI/SpeedButtons/Speed1" to="." method="_on_speed_1_pressed"]
[connection signal="pressed" from="GUI/SpeedButtons/Speed2" to="." method="_on_speed_2_pressed"]
[connection signal="pressed" from="GUI/SpeedButtons/Speed3" to="." method="_on_speed_3_pressed"]
[connection signal="pressed" from="GUI/SpeedButtons/Speed4" to="." method="_on_speed_4_pressed"]
